atualizacao home, responsividade

--- a/descricao.html
+++ b/descricao.html
@@ -17,9 +17,9 @@
     </header>
 
     <nav class="main-nav">
-      <a href="#">Home</a>
-      <a href="#">Produtos</a>
-      <a href="#" class="active">Meus Pedidos</a>
+      <a href="home.html">Home</a>
+      <a href="produtos.html">Produtos</a>
+      <a href="descricao.html" class="active">Meus Pedidos</a>
     </nav>
 
     <main>
